--- a/core/data/meta/podcast/korrespondenz_epos.html
+++ b/core/data/meta/podcast/korrespondenz_epos.html
@@ -332,7 +332,7 @@
             margin-left: 0;
             width: 100%;
             justify-content: center;
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
         .volume-slider {
@@ -751,8 +751,8 @@
                 </div>
             </div>
 
-            <div class="episode-tag">E02: Das Epos</div>
-            <h2 class="episode-title">Korrespondenz Epos</h2>
+            <div class="episode-tag">Das Epos der Villa Kunterbunt</div>
+            <h2 class="episode-title">E02: Das Epos</h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
@@ -978,7 +978,7 @@
         function setupMediaSession(audio) {
             if ('mediaSession' in navigator) {
                 navigator.mediaSession.metadata = new MediaMetadata({
-                    title: "E02: Korrespondenz Epos",
+                    title: "E02: Das Epos",
                     artist: "Villa Kunterbunt",
                     album: "Das Kompendium",
                     artwork: [
