--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -332,7 +332,7 @@
             margin-left: 0;
             width: 100%;
             justify-content: center;
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
         .volume-slider {
@@ -751,8 +751,8 @@
                 </div>
             </div>
 
-            <div class="episode-tag">E01: Das Kompendium</div>
-            <h2 class="episode-title">Korrespondenz System Analyse</h2>
+            <div class="episode-tag">Die erweiterte Studienanalyse</div>
+            <h2 class="episode-title">E01: Das Kompendium</h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
@@ -983,7 +983,7 @@
         function setupMediaSession(audio) {
             if ('mediaSession' in navigator) {
                 navigator.mediaSession.metadata = new MediaMetadata({
-                    title: "E01: Korrespondenz System Analyse",
+                    title: "E01: Das Kompendium",
                     artist: "Villa Kunterbunt",
                     album: "Das Kompendium",
                     artwork: [
