--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -360,7 +360,7 @@
             margin-left: 0;
             width: 100%;
             justify-content: center;
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
         .volume-slider {
@@ -619,7 +619,7 @@
             </div>
 
             <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
-            <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
+            <h2 class="episode-title">E01: Das Hörbuch <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
@@ -856,9 +856,9 @@
         if ('mediaSession' in navigator) {
             audio.addEventListener('play', () => {
                 navigator.mediaSession.metadata = new MediaMetadata({
-                    title: "Das Hörbuch",
+                    title: "E01: Das Hörbuch",
                     artist: "Villa Kunterbunt",
-                    album: "Das Korrespondenz Epos",
+                    album: "Das Hörbuch",
                     artwork: [
                         { src: new URL("../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png", window.location.href).href, sizes: '512x512', type: 'image/png' }
                     ]
