--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -694,7 +694,7 @@
                 </div>
                 <div class="episode-content">
                     <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
-                    <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
+                    <h2 class="episode-title">E01: Das Hörbuch <span class="badge">BETA</span></h2>
 
                     <div class="info-bar">
                         <button class="info-btn" id="tts-btn-1" onclick="toggleInfo(1)">TTS</button>
@@ -793,7 +793,7 @@
 
         // Episode Data for MediaSession
         const episodeData = {
-            1: { title: "Das Hörbuch (Epos)", artist: "Villa Kunterbunt", artwork: "../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png" }
+            1: { title: "E01: Das Hörbuch", artist: "Villa Kunterbunt", artwork: "../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png" }
         };
 
         function formatTime(seconds) {
@@ -830,7 +830,7 @@
                     navigator.mediaSession.metadata = new MediaMetadata({
                         title: data.title,
                         artist: "Villa Kunterbunt",
-                        album: "Das Korrespondenz Epos",
+                        album: "Das Hörbuch",
                         artwork: [
                             { src: absoluteArtworkUrl, sizes: '512x512', type: 'image/png' }
                         ]
