UI: Revert Cowork episode title and finalize Meta detail page harmonization
- Reverted Cowork title to 'Das Hörbuch' with BETA badge
- Set volume-control margin-top to 5px in Meta detail pages for tighter layout
- Verified all 4 workers are active for branch synchronization

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -686,7 +686,7 @@
                 </div>
                 <div class="episode-content">
                     <div class="episode-tag">Die Anthologie & Apokryphen (Hörbuch)</div>
-                    <h2 class="episode-title">E06: Die Anthologie <span class="badge">BETA</span></h2>
+                    <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
                     <div class="info-bar">
                         <button id="tts-btn-1" class="info-btn" onclick="toggleInfo(1)">TTS</button>
