Refactor: Finalize podcast titles and embed MP3 metadata
- Reverted Main/Cowork titles to 'Das Hörbuch' (removed E01/E06 numbering)
- Embedded cover art and metadata into all 4 podcast MP3 files
- Optimized OpenGraph thumbnail to 555KB (1280x640, 256 colors)
- Added embed_metadata.py script to core/scripts

--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -619,7 +619,7 @@
             </div>
 
             <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
-            <h2 class="episode-title">E01: Das Hörbuch <span class="badge">BETA</span></h2>
+            <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
@@ -856,7 +856,7 @@
         if ('mediaSession' in navigator) {
             audio.addEventListener('play', () => {
                 navigator.mediaSession.metadata = new MediaMetadata({
-                    title: "E01: Das Hörbuch",
+                    title: "Das Hörbuch",
                     artist: "Villa Kunterbunt",
                     album: "Das Hörbuch",
                     artwork: [
