Fix: Correct Main podcast header subtitle to 'Das Hörbuch'
- Changed subtitle from 'Das Korrespondenz Epos' to 'Das Hörbuch'
- Updated episode tags to match
- Ensures consistency across all Main podcast pages

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -659,7 +659,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Das Korrespondenz Epos</div>
+            <div class="subtitle">Das Hörbuch</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
@@ -693,7 +693,7 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
+                    <div class="episode-tag">Das Hörbuch</div>
                     <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
                     <div class="info-bar">
