--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -599,7 +599,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Das Korrespondenz Epos</div>
+            <div class="subtitle">Das Hörbuch</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
@@ -618,7 +618,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
+            <div class="episode-tag">Das Hörbuch</div>
             <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
