--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -337,6 +337,7 @@
 
         .volume-slider {
             -webkit-appearance: none;
+            appearance: none;
             width: 80px;
             height: 4px;
             background: rgba(255, 255, 255, 0.1);
@@ -547,7 +548,7 @@
             margin-bottom: 20px;
             border-left: 3px solid var(--accent-gold);
             animation: fadeIn 0.3s ease;
-            text-align: left !important;
+            text-align: center;
         }
 
         .info-text.visible {
@@ -703,6 +704,7 @@
                 .episode-description.collapsed {
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
+                    line-clamp: 3;
                     -webkit-box-orient: vertical;
                     overflow: hidden;
                     text-overflow: ellipsis;
