--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -517,6 +517,7 @@
             margin-bottom: 20px;
             border-left: 3px solid var(--accent-gold);
             animation: fadeIn 0.3s ease;
+            text-align: center;
         }
 
         .info-text.visible {
@@ -561,6 +562,7 @@
 
         .volume-slider {
             -webkit-appearance: none;
+            appearance: none;
             width: 80px;
             height: 4px;
             background: rgba(255, 255, 255, 0.1);
@@ -570,6 +572,7 @@
 
         .volume-slider::-webkit-slider-thumb {
             -webkit-appearance: none;
+            appearance: none;
             width: 12px;
             height: 12px;
             background: var(--text-muted);
