--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -725,7 +725,7 @@
         </article>
 
         <footer>
-            <a href="https://derlemue.github.io/villa-kunterbunt/"
+            <a href="https://github.com/derlemue/villa-kunterbunt"
                 style="display:inline-flex; align-items:center; gap:8px; color:var(--text-muted); text-decoration:none; padding:10px 20px; border:1px solid var(--glass-border); border-radius:30px; transition:all 0.2s ease; background:rgba(255,255,255,0.05);">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                     <path
