Restore accidentally removed description content

--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -772,7 +772,28 @@
                     Qualitätsprüfung</strong>.
             </div>
 
-            <div class="episode-description">
+            <div class="episode-description collapsed" id="desc-text">
+                In dieser Episode erfolgt eine tiefgehende systemtheoretische Dekonstruktion der „Villa Kunterbunt“
+                als IT-Infrastruktur. Was literarisch als Ort der Freiheit gilt, wird hier unter der Leitung der
+                Moderatorin und eines Experten für Systemanalyse als hochkomplexes, aber instabiles
+                <strong>Legacy-System</strong> analysiert. Die Analyse konzentriert sich primär auf die
+                <strong>Korrespondenzsysteme</strong> und die zugrunde liegende Architektur, wobei die Villa als
+                <strong>monolithisches Gefüge</strong> identifiziert wird, das durch eine extreme Anhäufung
+                technischer Schulden geprägt ist.
+                <br><br>
+                Die zentralen Argumente betreffen die <strong>mangelnde Governance</strong> und die
+                <strong>kritische Sicherheitsarchitektur</strong> des Standorts. Es wird erörtert, wie das Fehlen
+                einer effektiven Firewall den Zugriff durch externe Akteure wie staatliche Behörden begünstigt,
+                während der „Root-User“ Pippi Langstrumpf durch unbeschränkte Privilegien jegliche Standardisierung
+                verhindert. Die Diskussion beleuchtet zudem die asynchronen Kommunikationsprotokolle der
+                Protagonistin sowie die Einbindung heterogener Peripherieeinheiten in das instabile Systemgefüge.
+                <br><br>
+                Der technologische Kontext verknüpft klassische Systemanalyse mit modernen Begriffen der
+                <strong>IT-Security</strong> und des <strong>Prozessmanagements</strong>. Diese Folge bietet für
+                Professionals im Bereich Software-Architektur und Business-Analyse einen innovativen Blickwinkel auf
+                die Bewertung non-konformer Systeme und die Herausforderungen der <strong>Schatten-IT</strong>. Ein
+                präziser Diskurs über die Belastbarkeit chaotischer Strukturen in einer regulatorisch geprägten
+                Welt.
             </div>
             <button class="read-more-btn" id="read-more-btn" onclick="toggleDescription()">MEHR ANZEIGEN</button>
 
