--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -517,7 +517,7 @@
             margin-bottom: 20px;
             border-left: 3px solid var(--accent-gold);
             animation: fadeIn 0.3s ease;
-            text-align: center;
+            text-align: left !important;
         }
 
         .info-text.visible {
