--- a/trustme/index.html
+++ b/trustme/index.html
@@ -394,9 +394,9 @@
                 <br>
                 Datenquellen: "Bewertungen zu E.ON Energie Deutschland GmbH <a
                     href="https://derlemue.github.io/villa-kunterbunt/core/data/meta/documents/page_1-10_bewertungen_eon_energie_deutschland_gmbh_positiv.pdf"
-                    class="underline hover:text-blue-400">_positiv.pdf</a>" & "<a
-                    href="https://derlemue.github.io/villa-kunterbunt/core/data/meta/documents/page_1-10_bewertungen_eon_energie_deutschland_gmbh_negativ.pdf"
-                    class="underline hover:text-blue-400">_negativ.pdf</a>".
+                    class="underline hover:text-blue-400" target="_blank" rel="noopener noreferrer">_positiv.pdf</a>" &
+                "<a href="https://derlemue.github.io/villa-kunterbunt/core/data/meta/documents/page_1-10_bewertungen_eon_energie_deutschland_gmbh_negativ.pdf"
+                    class="underline hover:text-blue-400" target="_blank" rel="noopener noreferrer">_negativ.pdf</a>".
             </p>
         </div>
     </footer>
