feat: add resource links to trustme index page

--- a/trustme/index.html
+++ b/trustme/index.html
@@ -286,15 +286,37 @@
                         3</div>
                     <h3 class="mt-4 font-bold text-slate-800">Das Rauschen</h3>
                     <p class="text-sm text-slate-600 mt-2">
-                        Echte operative Probleme (1 Stern, organisch) gehen in der Masse der "Gefälligkeits-Klicks"
                         statistisch unter.
                     </p>
                 </div>
             </div>
         </section>
 
+        <!-- SECTION 5: RESOURCES CALL TO ACTION -->
+        <section class="border-t border-slate-300 pt-16">
+            <div class="flex flex-col items-center text-center">
+                <p class="text-lg text-slate-600 mb-8 max-w-2xl font-medium italic">
+                    "Die Forensik ist lückenlos. Verifizieren Sie die Ergebnisse im vollständigen Bericht oder hören Sie
+                    die detaillierte Analyse."
+                </p>
+                <div class="flex flex-col sm:flex-row gap-4 mb-16">
+                    <a href="http://derlemue.github.io/villa-kunterbunt/core/data/meta/documents/eon_trustpilot_enthuellungsbericht_zur_bewertungsplattform.pdf"
+                        target="_blank"
+                        class="bg-red-600 hover:bg-red-700 text-white px-10 py-4 rounded shadow-xl font-bold uppercase tracking-widest transition-all transform hover:-translate-y-1 active:scale-95">
+                        Bericht öffnen
+                    </a>
+                    <a href="http://derlemue.github.io/villa-kunterbunt/core/data/meta/podcast/eon_trustpilot_analyse.html"
+                        target="_blank"
+                        class="bg-blue-600 hover:bg-blue-700 text-white px-10 py-4 rounded shadow-xl font-bold uppercase tracking-widest transition-all transform hover:-translate-y-1 active:scale-95">
+                        TTS-Transkription
+                    </a>
+                </div>
+            </div>
+            <hr class="border-slate-300">
+        </section>
+
         <!-- FOOTER / METHODOLOGY -->
-        <footer class="border-t border-slate-300 pt-8 text-slate-500 text-sm">
+        <footer class="pt-8 text-slate-500 text-sm">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-slate-900 mb-2">Methodik der Analyse</h4>
