--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -1052,8 +1052,15 @@
                     <div id="info-text-5" class="info-text">
                         Die Audioinhalte wurden mittels <strong>Text-to-Speech-Synthese (TTS)</strong> generiert. Als
                         Datengrundlage dienen
-                        <strong>strukturierte Markdown-Skripte</strong>, die aus Studien und technischer
-                        Dokumentation extrahiert wurden.
+                        <strong>strukturierte Markdown-Skripte</strong>, die aus Studien, Berichten und technischer
+                        Dokumentation extrahiert
+                        wurden. Die Skripterstellung erfolgt intern oder durch Dritte, wobei sowohl <strong>rein
+                            manuelle
+                            Verfahren</strong> als auch <strong>hybride Prozesse</strong> unter Einsatz von
+                        <strong>Deep-Research-Modellen</strong> zur Anwendung kommen. Sämtliche Quelldateien unterliegen
+                        einer
+                        <strong>abschließenden manuellen
+                            Qualitätsprüfung</strong>.
                     </div>
 
                     <div class="episode-description">
