--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -885,7 +885,7 @@
                         <button class="info-btn source-btn has-source"
                             onclick="openSource('https://github.com/derlemue/villa-kunterbunt')">Repo</button>
                         <button class="info-btn source-btn has-source"
-                            onclick="openSource('https://derlemue.github.io/villa-kunterbunt/trustme/')">Quelle</button>
+                            onclick="openSource('https://derlemue.github.io/villa-kunterbunt/core/data/meta/documents/eon_trustpilot_enthuellungsbericht_zur_bewertungsplattform.pdf')">Quelle</button>
                     </div>
 
                     <div id="info-text-3" class="info-text">
